# Vuforia-Android-Native-

./: NEW_ARCHITECTURE_SUMMARY.md  README.md  README_AR_Setup.md  REFACTORING_SUMMARY.md  build.gradle.kts  gradle.properties  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/example/ibm_ai_weather_art_android/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/: StonesAndChips.xml
app/src/main/assets/models/: giraffe_voxel.glb
app/src/main/cpp/: CMakeLists.txt  VuforiaRenderingJNI.cpp  VuforiaRenderingJNI.h  VuforiaWrapper.h  vuforia_wrapper.cpp
app/src/main/java/com/example/ibm_ai_weather_art_android/: FilamentRenderer.java  MainActivity.java  MainActivity.kt  VuforiaCoreManager.java  VuforiaManager.java  WeatherArtApplication.kt
app/src/main/java/com/example/ibm_ai_weather_art_android/callbacks/: CallbackManager.java  TargetDetectionCallback.java
app/src/main/java/com/example/ibm_ai_weather_art_android/camera/: ARCameraController.java  CameraPermissionManager.java
app/src/main/java/com/example/ibm_ai_weather_art_android/initialization/: VuforiaInitialization.java
app/src/main/java/com/example/ibm_ai_weather_art_android/model/: ARObjectPlacer.java  GLBReader.java  ModelRenderer.java
app/src/main/java/com/example/ibm_ai_weather_art_android/ui/: ARMainView.java  ControlPanel.java
app/src/main/java/com/example/ibm_ai_weather_art_android/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/com/example/ibm_ai_weather_art_android/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
